objects/On_Support_License_Use_Mapping__mdt.object
<CustomObject>
    <description>Mapping License Use REST API response to case UI License Mapping</description>
    <fields>
        <fullName>License_Use_Map__c</fullName>
        <label>License Use Map</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Use_Mapping__c</fullName>
        <label>License Use Mapping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Use__c</fullName>
        <label>License Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACADEM</fullName>
                    <default>true</default>
                    <label>ACADEM</label>
                </value>
                <value>
                    <fullName>CLSSRM</fullName>
                </value>
                <value>
                    <fullName>STUDNT</fullName>
                </value>
                <value>
                    <fullName>HOME</fullName>
                </value>
                <value>
                    <fullName>PASS</fullName>
                </value>
                <value>
                    <fullName>INTERNAL</fullName>
                </value>
                <value>
                    <fullName>STANDARD</fullName>
                </value>
                <value>
                    <fullName>ACADEM_STUDNT</fullName>
                </value>
                <value>
                    <fullName>NDE</fullName>
                </value>
                <value>
                    <fullName>3RD_PARTY</fullName>
                </value>
                <value>
                    <fullName>SPONSOR_3RD_PARTY</fullName>
                </value>
                <value>
                    <fullName>SPONSOR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>On Support License Use Mapping</label>
    <pluralLabel>On Support License Reasons Mapping</pluralLabel>
</CustomObject>